--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://127.0.0.1:27017/rainbow_api_server
+      uri: mongodb://192.168.31.99/rainbow_api_server
   datasource:
-    url: jdbc:oracle:thin:@127.0.0.1:1521/orcl
+    url: jdbc:oracle:thin:@192.168.31.99:1521/orcl
     username: RAINBOW
     password: admin123
     type: com.alibaba.druid.pool.DruidDataSource
     validationQuery: select 1 from dual
-    filters: stat,log4j
+    filters: stat,wall
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
     initialSize: 5
     minIdle: 5
@@ -20,6 +20,7 @@ spring:
     poolPreparedStatements: true
     maxPoolPreparedStatementPerConnectionSize: 20
     useGlobalDataSourceStat: true
+    driver-class-name: oracle.jdbc.driver.OracleDriver
 
 
 
@@ -29,7 +30,7 @@ spring:
       default-property-inclusion: non_null
       time-zone: GMT+8
   redis:
-    host: 127.0.0.1
+    host: 192.168.31.99
     port: 6379
     pool:
       max-active: 8
