--- a/pom.xml
+++ b/pom.xml
@@ -104,17 +104,20 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.1.0.7.0</version>
-			<systemPath>D:/jar/ojdbc6-11.1.0.7.0.jar</systemPath>
-			<scope>system</scope>
+			<groupId>com.github.noraui</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>12.1.0.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ibeetl</groupId>
+			<artifactId>beetl</artifactId>
+			<version>2.7.13</version>
 		</dependency>
 
 	</dependencies>
