加入beetl模板配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ rainbow:
       url:  chuxiong-rainbow.com
 
 beetl:
-  base-root: D:\webstormProjects\aio-sales-webapp\dist
+  base-root: D:/webstormProjects/aio-sales-webapp/dist/
   properties:
     DELIMITER_PLACEHOLDER_START: _{
     DELIMITER_STATEMENT_START: <!--#
