--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,29 @@ spring:
     username: RAINBOW
     password: admin123
     type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      url: jdbc:oracle:thin:@127.0.0.1:1521/orcl
+      driver-class-name: oracle.jdbc.driver.OracleDriver
+      username: RAINBOW
+      password: admin123
+      initial-size: 5
+      min-idle: 5
+      max-active: 20
+      max-wait: 60000
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      validation-query: SELECT 1 from dual
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      max-pool-prepared-statement-per-connection-size: -1
+      filters: stat,wall,log4j
+      use-global-data-source-stat: true
+      connection-properties:
+        druid.stat.mergeSql: true
+        druid.stat.slowSqlMillis: 5000
+
+
   jackson:
       date-format: yyyy-MM-dd HH:mm:ss
       default-property-inclusion: non_null
@@ -42,7 +65,7 @@ rainbow:
       url:  chuxiong-rainbow.com
 
 beetl:
-  base-root: D:\webStormProjects\aio-sales-webapp\dist\
+  base-root: D:/webstormProjects/aio-sales-webapp/dist/
   properties:
     DELIMITER_PLACEHOLDER_START: _{
     DELIMITER_STATEMENT_START: <!--#
